# django_cafeteria

./: db.sqlite3  main.py  pyproject.toml
coffe_shop/: settings.py  urls.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: create_order_product.html  my_order.html
products/: admin.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/templates/products/: product_form.html  product_list.html
templates/: base.html
users/: urls.py  views.py
users/templates/users/: login.html  register.html
